# SRL-Agents

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  langgraph.json  main.py  memory_cli.py  pyproject.toml
examples/: scenarios.py
sql/: init.sql
srl_agents/: __init__.py  config.py  graph.py  logging.py  memory.py  query_refiner.py  scenarios.py  state.py
srl_agents/nodes/: actor.py  critic.py  forethought.py  learning_context.py  reflector.py  store.py  web_search.py
srl_agents/tools/: __init__.py  web_search.py
tests/: conftest.py  test_forethought.py  test_memory.py  test_reflector.py  test_web_search.py
