[project]
name = "srl-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "chromadb>=0.5.3",
    "langchain-core>=1.1.0",
    "langchain-openai>=1.1.0",
    "langgraph>=1.0.4",
    "numpy>=2.3.5",
    "rich>=13.9.4",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.4.7",
    "pytest>=8.3.0",
]
